--- a/content/posts/01.md
+++ b/content/posts/01.md
@@ -12,7 +12,7 @@ On the last day of 2019, China announced it had detected a “pneumonia of unkno
 It was the first time the world got a notice of what was about to hit.
 One hundred days later, the Covid-19 virus has spread to almost every country and has resulted in billions of people now living under lockdown. 
 
-The Coronavirus disease 2019 (COVID-19) is an infectious disease caused by severe acute respiratory syndrome coronavirus 2 (SARS-CoV-2). Since the first mention of it appearing in Wuhan, it has spread now all over the globe, resulting in the ongoing 2019–20 coronavirus pandemic.
+The Coronavirus disease 2019 (COVID-19) is an infectious disease caused by the Severe Acute Respiratory Syndrome Coronavirus 2 (SARS-CoV-2). Since the first mention of it appearing in Wuhan, it has spread now all over the globe, resulting in the ongoing 2019–20 coronavirus pandemic.
 
 So far, over a million people have been infected, close to a hundred thousand people have lost their lives, and the disease is still spreading exponentially.
 Schools, universities, workplaces and bubsinesses are shut down, people are losing their jobs, and the whole world is slowly falling into to an economic recession.
@@ -20,14 +20,14 @@ But in order to flatten the curve of the spread of the disease, it is our best o
 
 I too have quarantined myself at home during this lockdown, trying to responsibly play my part in the collective effort to contain the spread of the disease, while also staying positive and productive in my daily life.
 
-Throughout the day, I find myself frequently checking out sites like [India Covid-19 Tracker](covid19india.org), [Worldometer](worldometers.info/coronavirus/) Coronavirus tracker, [CovidVisualizer](covidvisualizer.com), etc. since they are a reliable source of verifiable stats compiled from various official government reports from around the world.
+Throughout the day, I find myself frequently checking out sites like [India Covid-19 Tracker](https://www.covid19india.org), [Worldometer Coronavirus Tracker](https://www.worldometers.info/coronavirus/), [CovidVisualizer](https://www.covidvisualizer.com), etc., since they are a reliable source of verifiable stats compiled from various official government reports from around the world.
 But these sites don't provide their visitors any means of getting notified on new data being published.
 
 The solution is simple. I need to create a program that scrapes these sites for the latest data being updated on coronavirus cases, and find a way to send these updates to me so that I won't have to manually check them time and again.
-Building a [Twitter](twitter.com) bot which would run the script at regular intervals or when new data arrives, seems to be the easiest way to achieve all of that.
+Building a [Twitter](https://twitter.com) bot which would run the script at regular intervals or when new data arrives, seems to be the easiest way to achieve all of that.
 
 Twitter provides an [API](https://developer.twitter.com) through which users can interact with their platform programmatically.
-The first step is to create a Twitter account, and _[Apply for a developer account](developer.twitter.com/en/apply-for-access)_ on the developer page.
+The first step is to create a Twitter account, and _[Apply for a developer account](https://developer.twitter.com/en/apply-for-access)_ on the developer page.
 After answering out some basic questionnaire, submit it for review to Twitter, which may take a couple of days.
 Once the verification is complete, we can start creating the app and develop the code for the bot.
 
