Modify and rebuild site

--- a/content/posts/01.md
+++ b/content/posts/01.md
@@ -1,5 +1,5 @@
 +++
-title = "Quarantine"
+title = "Tracking Coronavirus"
 date = 2020-04-09T02:29:14+05:30
 draft = false
 tags = ["covid19"]
@@ -8,9 +8,8 @@ categories = []
 It has been 100 days of Coronavirus today.
 
 On the last day of 2019, China announced it had detected a “pneumonia of unknown cause” in  Wuhan, the capital city of China's Hubei province.
-
 It was the first time the world got a notice of what was about to hit.
-One hundred days later, the Covid-19 virus has spread to almost every country and has resulted in billions of people now living under lockdown. 
+One hundred days later, the novel Coronavirus disease has spread to almost every country and has resulted in billions of people now living under lockdown. 
 
 The Coronavirus disease 2019 (COVID-19) is an infectious disease caused by the Severe Acute Respiratory Syndrome Coronavirus 2 (SARS-CoV-2). Since the first mention of it appearing in Wuhan, it has spread now all over the globe, resulting in the ongoing 2019–20 coronavirus pandemic.
 
@@ -29,9 +28,9 @@ Building a [Twitter](https://twitter.com) bot which would run the script at regu
 Twitter provides an [API](https://developer.twitter.com) through which users can interact with their platform programmatically.
 The first step is to create a Twitter account, and _[Apply for a developer account](https://developer.twitter.com/en/apply-for-access)_ on the developer page.
 After answering out some basic questionnaire, submit it for review to Twitter, which may take a couple of days.
-Once the verification is complete, we can start creating the app and develop the code for the bot.
+Once the verification is complete, we can go ahead and create the app and start developing the code for the bot.
 
-In the next part of this story, we will look into the process of actually developing the bot and hosting it online so that it works round the clock.
+In the next part of this story, we will look into the process of actually developing the bot and hosting it online so that it works round the clock tweeting out the latest stats on Covid cases.
 
 Stay tuned!
 
