Update post and rebuild

--- a/content/posts/02.md
+++ b/content/posts/02.md
@@ -2,7 +2,7 @@
 title = "Exploring Alternatives"
 date = 2020-04-17T02:29:14+05:30
 draft = false
-tags = ["covid19", "whatsapp", "python", "twilio"]
+tags = ["whatsapp", "python", "twilio"]
 categories = []
 +++
 Last week, I decided to build a Twitter bot to tweet out the latest Covid-19 cases and news tracked by [Worldometers](https://www.worldometers.info/coronavirus/).
@@ -14,9 +14,9 @@ Usually, WhatsApp takes several weeks for approving a WhatsApp Business account 
 
 Let us explore the Twilio API for WhatsApp to start interacting with WhatsApp programmatically.
 
-The first step is to create a free Twilio account. All new users get a $15 trial credit on signup which can be used to purchase a new number and test the platform.
-To start using the Twilio API for WhatsApp in production, we need to purchase a number from Twilio and apply for a WhatsApp Business profile.
-We are going to skip purchasing a number for now and directly start developing, and test it using the Sandbox in the console.
+The first step is to create a free Twilio account. All new users get a $15 bonus trial credit on signup to test out their platform.
+To start using the Twilio API for WhatsApp in production, we will need to purchase a number from Twilio and apply for a WhatsApp Business profile.
+We are going to skip this step for now and directly start developing our application, and test it out using the Sandbox in the console.
 
 I will be using Python3 on my local development machine running Linux.
 
@@ -78,9 +78,9 @@ client.messages.create(body='Hello, world!',
 
 The above code imports the Twilio Python helper library, instantiates the helper library client, sets a from and to WhatsApp number, and then sends a single message with the client.messages.create function call.
 
-Our Python script is now ready, and we just need to activate the Twilio WhatsApp sandbox from the Twilio console to test it out.
+Our Python script is now ready, and we just need to activate the WhatsApp sandbox from the Twilio console to test it out.
 
-From the WhatsApp [page](https://www.twilio.com/console/sms/whatsapp/learn) in the Twilio Console, note the default sandbox WhatsApp number provided by Twilio and the sandbox keyword.
+From the WhatsApp [page](https://www.twilio.com/console/sms/whatsapp/learn) in the Twilio Console, note the default sandbox number provided by Twilio and the sandbox keyword.
 Open WhatsApp on your device, and send `join <your sandbox keyword>` to the sandbox number to connect to it. You should receive a reply from the number confirming that you have been connected to the sandbox.
 
 That's it! With the virtual environment activated, and the environment variables set, you are now ready to receive messages sent by your app from the sandbox you have connected to.
@@ -89,4 +89,3 @@ To disconnect from the sandbox, simply send `stop`.
 In the next part of this story, we will go beyond the basics, and look at the process of actually building a chatbot that would scrape Worldometers for the latest data on Coronavirus, and respond to user queries with accurate results from the website.
 
 See you in the next one!
-
