Update posts and build public

--- a/content/posts/01.md
+++ b/content/posts/01.md
@@ -1,5 +1,5 @@
 +++
-title = "Tracking Coronavirus"
+title = "Isolation"
 date = 2020-04-09T02:29:14+05:30
 draft = false
 tags = ["covid19"]
@@ -17,13 +17,14 @@ So far, over a million people have been infected, close to a hundred thousand pe
 Schools, universities, workplaces and bubsinesses are shut down, people are losing their jobs, and the whole world is slowly falling into to an economic recession.
 But in order to flatten the curve of the spread of the disease, it is our best option to fight the disease in the absense of a cure or a vaccine.
 
-I too have quarantined myself at home during this lockdown, trying to responsibly play my part in the collective effort to contain the spread of the disease, while also staying positive and productive in my daily life.
+I too have quarantined myself at home during this lockdown, trying to responsibly play my part in the collective effort to contain the spread of the disease.
+While I am trying my best to stay productive and positive in my daily life working from home, there are days when I find myself feeling bored and unmotivated, often procrastinating doing something useful with my free time.
+Frequent distractions now involve either compulsively scrolling through my feeds for the latest news and stories on the current pandemic situation, or checking out sites like [India Covid-19 Tracker](https://www.covid19india.org), [Worldometers Coronavirus](https://www.worldometers.info/coronavirus/), etc. to get the latest statistics on Coronavirus cases.
+These sites present a lot of insightful information compiled from crowd-sourced data from various official government reports.
+But it would have been nicer if one could also get get notified regularly with the summary of important data, when they get updated on these sites.
 
-Throughout the day, I find myself frequently checking out sites like [India Covid-19 Tracker](https://www.covid19india.org), [Worldometer Coronavirus Tracker](https://www.worldometers.info/coronavirus/), [CovidVisualizer](https://www.covidvisualizer.com), etc., since they are a reliable source of verifiable stats compiled from various official government reports from around the world.
-But these sites don't provide their visitors any means of getting notified on new data being published.
-
-The solution is simple. I need to create a program that scrapes these sites for the latest data being updated on coronavirus cases, and find a way to send these updates to me so that I won't have to manually check them time and again.
-Building a [Twitter](https://twitter.com) bot which would run the script at regular intervals or when new data arrives, seems to be the easiest way to achieve all of that.
+The solution is simple. I need to create a script that scrapes these sites for the latest data on coronavirus cases, and find a way to send those updates to me so that I won't have to manually check them time and again.
+If we can build a [Twitter](https://twitter.com) bot which would run that script at regular intervals to tweet out the stats whenever new data arrives, other people too can make use of this feature by subscribing to that Twitter handle.
 
 Twitter provides an [API](https://developer.twitter.com) through which users can interact with their platform programmatically.
 The first step is to create a Twitter account, and _[Apply for a developer account](https://developer.twitter.com/en/apply-for-access)_ on the developer page.
@@ -33,4 +34,3 @@ Once the verification is complete, we can go ahead and create the app and start 
 In the next part of this story, we will look into the process of actually developing the bot and hosting it online so that it works round the clock tweeting out the latest stats on Covid cases.
 
 Stay tuned!
-
