--- a/content/posts/02.md
+++ b/content/posts/02.md
@@ -1,11 +1,11 @@
 +++
-title = "Exploring Alternatives"
+title = "WhatsApp"
 date = 2020-04-17T02:29:14+05:30
 draft = false
-tags = ["whatsapp", "python", "twilio"]
+tags = ["whatsapp", "twilio", "python"]
 categories = []
 +++
-Last week, I decided to build a Twitter bot to tweet out the latest Covid-19 cases and news tracked by [Worldometers](https://www.worldometers.info/coronavirus/).
+Last week, I decided to build a Twitter bot to tweet out the latest Covid-19 cases and news tracked by [Worldometers](https://www.worldometers.info/coronavirus/) and [India Covid-19 Tracker](https://www.covid19india.org).
 
 While waiting for my developer account request to get approved by Twitter (which is taking rather longer than usual), I started looking into some other platforms where I could start developing right away.
 
@@ -76,7 +76,7 @@ client.messages.create(body='Hello, world!',
                        to=to_whatsapp_number)
 ```
 
-The above code imports the Twilio Python helper library, instantiates the helper library client, sets a from and to WhatsApp number, and then sends a single message with the client.messages.create function call.
+The above code imports the Twilio Python helper library, instantiates the helper library client, sets a from and to WhatsApp number, and then sends a single message with the `client.messages.create()` function call.
 
 Our Python script is now ready, and we just need to activate the WhatsApp sandbox from the Twilio console to test it out.
 
