Add new post and update pagination in config.toml

--- a/content/posts/03.md
+++ b/content/posts/03.md
@@ -14,7 +14,7 @@ We have already seen how we can import twilio to a python script to use it's API
 
 In this project, we would create a Flask app and use Twilio's `twiml` APIs to send meaningful information based on user queries.
 
-Our original intent from the [first](../../posts/01) post was to be able to get notified on the latest Covid-19 case stats. The easy solution that I wanted to implement was a Twitter bot that tweets every time it receives updated stats from it's trusted data sources. Since I have yet not recevied **Developer access for Twitter, I deceided to implement an information system related to Covid-19 over WhatsApp. It is not free to send self initiated messages, and to be able to send such messages, one needs to apply for a Business Account with WhatsApp which again goes through an approval process which again takes several weeks. We are gonna worry about all that later, and start building and testing right away using the Twilio Sandbox for WhatsApp.
+Our original intent from the [first](../01) post was to be able to get notified on the latest Covid-19 case stats. The easy solution that I wanted to implement was a Twitter bot that tweets every time it receives updated stats from it's trusted data sources. Since I have yet not recevied **Developer access for Twitter, I deceided to implement an information system related to Covid-19 over WhatsApp. It is not free to send self initiated messages, and to be able to send such messages, one needs to apply for a Business Account with WhatsApp which again goes through an approval process which again takes several weeks. We are gonna worry about all that later, and start building and testing right away using the Twilio Sandbox for WhatsApp.
 
 My main objective for the Hackathon was to show daily and total Covid-19 cases in India. Using the location services of WhatsApp, we could also get nearby case statistics andn essential services information for users to have an idea of the neighbourhood they are in.
 
